# Any2HeliosDB

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: README.md  cdc.md  development-history.md  heliosdb-compatibility.md  mcp.md  troubleshooting.md
docs/benchmarks/: BASELINE.md  baseline-full.json  baseline-lite.json  baseline-nano.json  full-2026-06-23.md  lite-2026-06-23.md
docs/demos/: README.md  oracle-nano-cdc.cast  oracle-nano-migrate.cast  pagila-nano-cdc.cast  pagila-nano-migrate.cast
docs/demos/scripts/oracle/: a2h.toml  crud1.sql  crud2.sql  demo-cdc-clean.sh  demo-migrate-clean.sh  record-cdc-clean.sh  record-migrate-clean.sh
docs/demos/scripts/pagila/: config-cdc.toml  config.toml  crud.sql  demo-cdc.sh  demo.sh  record-cdc.sh  record.sh  verify-nano.sql
docs/guides/: cdc-operations.md  configuration.md  examples.md  getting-started.md
docs/migration/: mysql-and-mssql.md  oracle-to-heliosdb-full.md  oracle-to-heliosdb-lite.md  oracle-to-heliosdb-nano.md  to-postgresql.md
docs/reference/: cli.md  oracle-object-support.md  type-mapping.md
docs/roadmap/: README.md  v2.0.0.md
src/any2heliosdb/: __init__.py  __main__.py  cli.py  constants.py  errors.py
src/any2heliosdb/assess/: __init__.py  inventory.py  render.py  report.py
src/any2heliosdb/cdc/: deadletter.py  engine.py  posfile.py  registry.py  replicat.py  trail.py
src/any2heliosdb/cdc/sources/: mysql_binlog.py  oracle_scn.py  postgres_logical.py
src/any2heliosdb/chunking/: pk_range.py
src/any2heliosdb/config/: model.py  store.py  wizard.py
src/any2heliosdb/core/: catalog_model.py  change_record.py  export.py  identifiers.py  loader.py  manifest.py  orchestrator.py
src/any2heliosdb/emit/: ddl.py  mysql_ddl.py  oracle_ddl.py
src/any2heliosdb/mcp/: __init__.py  auth.py  protocol.py  server.py  tools.py
src/any2heliosdb/monitor/: __init__.py  live.py
src/any2heliosdb/plsql/: __init__.py  cost.py  gap.py  procedural.py  rewrite.py
src/any2heliosdb/sources/: base.py
src/any2heliosdb/sources/mssql/: adapter.py
src/any2heliosdb/sources/mysql/: adapter.py
src/any2heliosdb/sources/oracle/: adapter.py
src/any2heliosdb/sources/postgres/: adapter.py
src/any2heliosdb/typemap/: defaults.py  registry.py
src/any2heliosdb/validate/: __init__.py  counts.py  data.py  model.py  structure.py  util.py
tests/: conftest.py
tests/fixtures/: mssql_sample.py  mysql_sample.py  oracle_sample.py
tests/integration/: test_migrate_back.py  test_mssql_to_helios.py  test_mysql_binlog.py  test_mysql_to_helios.py  test_native_tns_handshake.py  test_oracle_to_helios.py
tests/unit/: test_assess.py  test_capability_probe.py  test_cdc.py  test_cdc_bounded.py  test_cdc_config.py  test_cdc_dedup.py  test_cdc_engine_mysql.py  test_cdc_engine_replicat.py  test_cdc_lifecycle.py  test_cdc_mcp.py  test_cdc_mysql_capture.py  test_cdc_new_tables.py  test_cdc_poison.py  test_cdc_posfile.py  test_cdc_purge_recovery.py  test_cdc_registry.py  test_cdc_snapshot_dedup.py  test_cdc_trail_rotation.py  test_cdc_txn_apply.py  test_change_record_codec.py  test_checksum_framing.py  test_chunking.py  test_connection_leaks.py  test_copy_codec_binary.py  test_core.py  test_emit.py  test_identifiers.py  test_loader_batch_size.py  test_loader_resume.py  test_manifest.py  test_manifest_nano.py  test_mcp.py  test_monitor.py  test_mssql_adapter.py  test_mysql_ddl.py  test_mysql_driver_writes.py  test_native_driver.py  test_oracle_connect_options.py  test_oracle_ddl.py  test_oracle_scn_source.py  (+14 more)
tools/: bench_oltp.py  bench_server.py  native_connect_probe.py  run_ab_bench.py
