[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "any2heliosdb"
version = "0.9.3"
description = "Migrate Oracle / MySQL / PostgreSQL / SQL Server into HeliosDB or stock PostgreSQL — a modern, Python successor to Ora2Pg."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "HeliosDatabase" }]
keywords = [
    "oracle", "mysql", "sqlserver", "postgresql", "postgres",
    "migration", "heliosdb", "ora2pg", "cdc", "etl", "database",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
]

# Core deps are light. Source DB drivers are optional extras so a MySQL-only
# user never installs oracledb, etc. psycopg (v3) is the portable PG-wire target.
dependencies = [
    "psycopg[binary]>=3.1",
    "typer>=0.9",
    "rich>=12",
    "jinja2>=2.11",
    "tomli>=1.2 ; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/HeliosDatabase/Any2HeliosDB"
Repository = "https://github.com/HeliosDatabase/Any2HeliosDB"
Documentation = "https://github.com/HeliosDatabase/Any2HeliosDB/tree/main/docs"
Changelog = "https://github.com/HeliosDatabase/Any2HeliosDB/blob/main/CHANGELOG.md"
Issues = "https://github.com/HeliosDatabase/Any2HeliosDB/issues"

[project.optional-dependencies]
oracle = ["oracledb>=2.0"]
mysql = ["PyMySQL>=1.1"]
mysql-cdc = ["PyMySQL>=1.1", "mysql-replication>=1.0"]
mssql = ["pyodbc>=5.0"]
# MCP server for AI-agent remote administration. The official SDK needs Python
# >= 3.10; on 3.9 the server falls back to a built-in, wire-compatible JSON-RPC
# endpoint (stdlib only — no extra deps required to run it there).
mcp = ["mcp>=1.0 ; python_version >= '3.10'"]
all = ["oracledb>=2.0", "PyMySQL>=1.1", "mysql-replication>=1.0", "pyodbc>=5.0",
       "mcp>=1.0 ; python_version >= '3.10'"]
dev = ["pytest>=7", "pytest-cov", "ruff", "mypy"]

[project.scripts]
a2h = "any2heliosdb.cli:main"
any2heliosdb = "any2heliosdb.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/any2heliosdb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py39"
