[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "any2heliosdb"
# Single-sourced from src/any2heliosdb/__init__.py::__version__ (see
# [tool.hatch.version]) so the wheel metadata and the runtime-reported version can
# never disagree; the CI release step asserts the built version == the release tag.
dynamic = ["version"]
description = "Migrate Oracle / MySQL / PostgreSQL / SQL Server into HeliosDB or stock PostgreSQL — a modern, Python successor to Ora2Pg."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
authors = [{ name = "HeliosDatabase" }]
keywords = [
    "oracle", "mysql", "sqlserver", "postgresql", "postgres",
    "migration", "heliosdb", "ora2pg", "cdc", "etl", "database",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
]

# Core deps are light. Source DB drivers are optional extras so a MySQL-only
# user never installs oracledb, etc. psycopg (v3) is the portable PG-wire target.
dependencies = [
    "psycopg[binary]>=3.1",
    "typer>=0.9",
    "rich>=12",
    "jinja2>=2.11",
    "tomli>=1.2 ; python_version < '3.11'",
    "tomli-w>=1.0",
]

[project.urls]
Homepage = "https://github.com/HeliosDatabase/Any2HeliosDB"
Repository = "https://github.com/HeliosDatabase/Any2HeliosDB"
Documentation = "https://github.com/HeliosDatabase/Any2HeliosDB/tree/main/docs"
Changelog = "https://github.com/HeliosDatabase/Any2HeliosDB/blob/main/CHANGELOG.md"
Issues = "https://github.com/HeliosDatabase/Any2HeliosDB/issues"

[project.optional-dependencies]
oracle = ["oracledb>=2.0"]
mysql = ["PyMySQL>=1.1"]
mysql-cdc = ["PyMySQL>=1.1", "mysql-replication>=1.0"]
mssql = ["pyodbc>=5.0"]
# MCP server for AI-agent remote administration. The official SDK needs Python
# >= 3.10; on 3.9 the server falls back to a built-in, wire-compatible JSON-RPC
# endpoint (stdlib only — no extra deps required to run it there).
mcp = ["mcp>=1.0 ; python_version >= '3.10'"]
# Use embedded HeliosDB-Nano (in-process) as the resumable-load ledger backend
# instead of the stdlib sqlite3 default ([options] manifest_backend = "nano").
nano-manifest = ["heliosdb-nano-embedded>=3.60.8"]
all = ["oracledb>=2.0", "PyMySQL>=1.1", "mysql-replication>=1.0", "pyodbc>=5.0",
       "mcp>=1.0 ; python_version >= '3.10'", "heliosdb-nano-embedded>=3.60.8"]
dev = ["pytest>=7", "pytest-cov", "ruff", "mypy"]

[project.scripts]
a2h = "any2heliosdb.cli:main"
any2heliosdb = "any2heliosdb.cli:main"

[tool.hatch.version]
# The one source of truth for the version: __version__ in the package __init__.
path = "src/any2heliosdb/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/any2heliosdb"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
# Reproducible gate: `mypy src/any2heliosdb`. Pin the interpreter so the check is
# identical across the CI matrix (3.9/3.11/3.13), and flag stale suppressions so
# a `# type: ignore` can never silently rot.
python_version = "3.9"
warn_unused_ignores = true

# Optional source/target DB drivers and the embedded-Nano manifest wheel ship no
# type stubs or py.typed marker; jinja2 (a core dep) ships without one in some
# environments. These are genuinely-untyped third-party boundaries — silence the
# missing-import noise here rather than sprinkling per-line ignores. Re-add proper
# stubs if/when upstream publishes them (e.g. types-PyMySQL for pymysql).
[[tool.mypy.overrides]]
module = [
    # tomli is only installed (and only imported) on <3.11, but python_version=3.9
    # makes mypy analyze that branch on every interpreter — including the CI
    # 3.11/3.13 legs where pip (env marker) never installs it.
    "tomli",
    "oracledb",
    "oracledb.*",
    "pymysql",
    "pymysql.*",
    "pymysqlreplication",
    "pymysqlreplication.*",
    "pyodbc",
    "heliosdb_nano",
    "heliosdb_nano.*",
    "jinja2",
    "jinja2.*",
]
ignore_missing_imports = true
